--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,36 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
+  margin-top: -100px;
+}
+
+input[type=number], select {
+  width: 300px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 24px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.line{
+border-right: 3px solid white;
+height: 350px;
+position: absolute;
+}
+
+td {
+  width: 50px;
 }
 
 .App-header {
